Add navigation menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%=render'layouts/navbar'%>
+    <div class="container_body">
+      <%= yield %>
+    </div>
   </body>
 </html>
