--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="ui small inverted menu">
   <div class="ui container">
-    <a class="item">
-      Chatroom
-    </a>
+        <%= link_to 'Chatroom', root_path, class: "item" %> 
+
     <a class="item">
       Messages
     </a>
@@ -10,13 +9,13 @@
       <div class="ui dropdown item">  
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Log in</a>
+          <%= link_to "Log in", login_path, class: "item" %>
           <a class="item">Log out</a>
           <a class="item">Spanish</a>
         </div>
       </div>
       <div class="item">
-          <div class="ui primary button">Sign Up</div>
+        <%= link_to 'Sign Up', login_path, class: "ui primary button" %> 
       </div>
     </div>
   </div>
