Add message partial

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,15 +9,7 @@
 		  <div class="content">
 				<div class="ui small feed">
 				  <h4 class="ui header">Followers Activity</h4>
-				  <% @messages.each do |message| %>
-					  <div class="event">
-					    <div class="content">
-					      <div class="summary">
-					        <em><%=message.user.username%></em>:  <%=message.body%>
-					      </div>
-					    </div>
-					  </div>
-				  <% end %>
+						<%= render @messages %>					  
 				</div>
 			</div>
 		</div>
