--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,14 +9,18 @@
       <div class="ui dropdown item">  
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <%= link_to "Log in", login_path, class: "item" %>
-          <a class="item">Log out</a>
-          <a class="item">Spanish</a>
+          <% if logged_in? %>
+            <%= link_to "Log out", logout_path, method: :delete,  class: "item" %>]
+          <% else %>
+            <%= link_to "Log in", login_path, class: "item" %>
+          <% end %>
         </div>
       </div>
-      <div class="item">
-        <%= link_to 'Sign Up', login_path, class: "ui primary button" %> 
-      </div>
+      <% if !logged_in? %>
+          <div class="item">
+            <%= link_to 'Sign Up', login_path, class: "ui primary button" %> 
+          </div>
+        <% end %>
     </div>
   </div>
 </div>
