--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%=render'layouts/navbar'%>
     <div class="container_body">
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
   </body>
