--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,3 +1,6 @@
+<% if !logged_in? %>
+	<%= render 'chatroom/homepage' %>
+<% else %>
 <h2 class="ui center aligned icon header">
   <i class="cube icon red"></i>
   TalkCube
@@ -33,3 +36,4 @@
 		</div>
 	</div>
 </div>
+<% end %>
