Added homepage partial

--- a/app/views/chatroom/_homepage.html.erb
+++ b/app/views/chatroom/_homepage.html.erb
@@ -1,3 +1,90 @@
-<h2 class="ui center aligned icon header">
+<br><br><br><br><br>
+
+<h1 class="ui center aligned icon header">
   <i class="cube icon red"></i>
-  TalkCube
+  <div class="content">
+    TalkCube
+    <div class="sub header">A group chat messaging app</div>
+  </div>
+</h1>
+
+<br>
+
+<div class="ui one column stackable center aligned page grid">
+   <div class="column twelve wide">
+<%= link_to '<button type="button", class="ui right labeled huge icon button" ><i class="right arrow icon"></i>Get Started</button>'.html_safe, login_path%>
+   </div>
+</div>
+
+<br><br><br><br><br><br><br><br><br><br>
+
+<div class="ui divider"></div>
+
+<div class="ui vertical stripe segment">
+  <div class="ui middle aligned stackable grid container">
+    <div class="row">
+      <div class="eight wide column">
+        <h3 class="ui header">Why TalkCube?</h3>
+        <p>Your team needs apps to communicate to manage projects, organize contacts, track sales. TalkCube does it all. It's a web app where you can chat to your colleagues.</p>
+      </div>
+      <div class="six wide right floated column">
+        <!-- <img src="images/testImage.png" class="ui large bordered rounded image"> -->
+        <%= image_tag("testImage.png", class: "ui medium bordered rounded image") %>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ui vertical stripe quote segment">
+  <div class="ui equal width stackable internally celled grid">
+    <div class="center aligned row">
+      <div class="column">
+        <h3>"What a Company"</h3>
+        <p>That is what they all say about us</p>
+      </div>
+      <div class="column">
+        <h3>"I shouldn't have gone with their competitor."</h3>
+        <p>
+          <%= image_tag("patrick.png", class: "ui avatar image") %> <b>Dan Malcer</b> CTO, Malcer & Co.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br><br>
+
+<div class="ui  vertical footer segment">
+  <div class="ui container">
+    <div class="ui stackable  divided equal height stackable grid">
+      <div class="three wide column">
+        <h4 class="ui header">About</h4>
+        <div class="ui link list">
+          <a href="#" class="item">Sitemap</a>
+          <a href="#" class="item">Contact Us</a>
+          <a href="#" class="item">Religious Ceremonies</a>
+          <a href="#" class="item">Gazebo Plans</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui header">Services</h4>
+        <div class="ui link list">
+          <a href="#" class="item">Banana Pre-Order</a>
+          <a href="#" class="item">DNA FAQ</a>
+          <a href="#" class="item">How To Access</a>
+          <a href="#" class="item">Favorite X-Men</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui header">Footer Header</h4>
+        <p><b>Address:</b> 15, Yemen Road, Yemen</p>
+        <p>404-200/201/202</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h5 class="ui center aligned icon header">
+	Copyright 2018 TalkCube
+</h5>
