Add messages from UI

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,16 +7,25 @@
 </h2>
 
 <div class="ui two column grid">
-	<div class="twelve wide column">		
-		<div class="ui fluid raised card chatbox">
-		  <div class="content">
-				<div class="ui small feed">
-				  <h4 class="ui header">Followers Activity</h4>
-						<%= render @messages %>					  
-				</div>
-			</div>
-		</div>
-	</div>	
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui feed">
+          <%= render @messages %>
+        </div>
+      </div>
+      <div class="extra content">
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+          <div class="field">
+            <div class="ui fluid icon input">
+              <%= f.text_field :body %>
+              <%= f.button '<i class="bordered inverted red edit icon"></i>'.html_safe %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 
 	<div class="four wide column">
 		<div class="ui fluid raised card chatbox">
