Display users to UI

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -29,17 +29,14 @@
 
 	<div class="four wide column">
 		<div class="ui fluid raised card chatbox">
-		  <div class="content">		
+		  <div class="content">	
+			  <h4>All users</h4>	
 				<div class="ui inverted vertical menu">
-				  <a class="active item">
-				    Home
-				  </a>
-				  <a class="item">
-				    Messages
-				  </a>
-				  <a class="item">
-				    Friends
-				  </a>
+				  <% @users.all.each do |user| %>
+					  <a class="item">
+					    <%= user.username %>
+					  </a>
+				  <% end %>
 				</div>
 			</div>
 		</div>
