Changed Image in hompage

--- a/app/views/chatroom/_homepage.html.erb
+++ b/app/views/chatroom/_homepage.html.erb
@@ -29,7 +29,7 @@
       </div>
       <div class="six wide right floated column">
         <!-- <img src="images/testImage.png" class="ui large bordered rounded image"> -->
-        <%= image_tag("testImage.png", class: "ui medium bordered rounded image") %>
+        <%= image_tag("image.png", class: "ui medium bordered rounded image") %>
 
       </div>
     </div>
