Add scrollbar to users field

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -29,7 +29,7 @@
 
 	<div class="four wide column">
 		<div class="ui fluid raised card chatbox">
-		  <div class="content">	
+		  <div class="content", id="users">	
 			  <h4>All users</h4>	
 				<div class="ui inverted vertical menu">
 				  <% @users.all.each do |user| %>
